--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 cython
-git+https://github.com/blaze/dask.git#egg=dask[complete]
+git+https://github.com/dask/dask.git#egg=dask[complete]
 git+https://github.com/blaze/castra.git#egg=castra
 numpy
 toolz
